# advent-of-code

./: .gitignore  Cargo.toml
2023/aoc2a/: Cargo.toml
2023/aoc2b/: Cargo.toml
2023/aoc4b/: Cargo.toml
2023/aoc4b/src/: main.rs
2023/aoc5a/: Cargo.toml
2023/aoc5a/src/: main.rs
2023/aoc5b/: Cargo.toml
2023/aoc5b/src/: main.rs
2024/aoc1/: Cargo.toml
2024/aoc2b/: Cargo.toml
2024/aoc2b/src/: main.rs
2024/aoc3/: Cargo.toml
2024/aoc3/src/: main.rs
2024/aoc4a/src/: main.rs
2024/aoc5a/: Cargo.toml
2024/aoc5a/src/: main.rs
2024/aoc5b/src/: main.rs
2024/aoc6a/src/: main.rs
2024/aoc6b/: Cargo.toml
2024/aoc7a/: Cargo.toml
2024/aoc7b/src/: main.rs
2024/aoc8a/: Cargo.toml
2024/aoc8a/src/: main.rs
2024/aoc9a/: Cargo.toml
2024/aoc9b/src/: main.rs
2025/aoc1a/: aoc1a.cabal
2025/aoc1a/app/: Main.hs
2025/aoc2a/: aoc2a.cabal
2025/aoc2a/app/: Main.hs
2025/aoc2b/: CHANGELOG.md  aoc2b.cabal
2025/aoc2b/app/: Main.hs
2025/aoc3a/: CHANGELOG.md  LICENSE  aoc3a.cabal
2025/aoc3a/app/: Main.hs
2025/aoc3b/app/: Main.hs
2025/aoc4a/: main.c
2025/aoc4b/: main.c
crates/2023/aoc3/: Cargo.toml
crates/2023/aoc4a/: Cargo.toml
crates/2023/aoc4b/: Cargo.toml
crates/2023/aoc5a/: Cargo.toml
crates/2023/aoc5b/: Cargo.toml
crates/2024/aoc10a/: Cargo.toml
crates/2024/aoc10b/: Cargo.toml
crates/2024/aoc1b/: Cargo.toml
crates/2024/aoc2/: Cargo.toml
crates/2024/aoc3b/: Cargo.toml
crates/2024/aoc4a/: Cargo.toml
crates/2024/aoc4b/: Cargo.toml
crates/2024/aoc5b/: Cargo.toml
crates/aoc3/: Cargo.toml
crates/aoc5b/: Cargo.toml
(+24 files in other folders)
