cabal-version:      3.0
name:               aoc2a
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Alvaro
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable aoc2a
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
